--- a/Karim/Ch3/Chapter3.ipynb
+++ b/Karim/Ch3/Chapter3.ipynb
@@ -5642,6 +5642,263 @@
    "source": [
     "## 3.3 Files and the Operating System"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path=\"../../examples/segismundo.txt\"\n",
+    "f=open(path,encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='../../examples/segismundo.txt' mode='r' encoding='utf-8'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sueña el rico en su riqueza,\n",
+      "\n",
+      "que más cuidados le ofrece;\n",
+      "\n",
+      "\n",
+      "\n",
+      "sueña el pobre que padece\n",
+      "\n",
+      "su miseria y su pobreza;\n",
+      "\n",
+      "\n",
+      "\n",
+      "sueña el que a medrar empieza,\n",
+      "\n",
+      "sueña el que afana y pretende,\n",
+      "\n",
+      "sueña el que agravia y ofende,\n",
+      "\n",
+      "\n",
+      "\n",
+      "y en el mundo, en conclusión,\n",
+      "\n",
+      "todos sueñan lo que son,\n",
+      "\n",
+      "aunque ninguno lo entiende.\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in f:\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sueña el rico en su riqueza,\\n',\n",
+       " 'que más cuidados le ofrece;\\n',\n",
+       " '\\n',\n",
+       " 'sueña el pobre que padece\\n',\n",
+       " 'su miseria y su pobreza;\\n',\n",
+       " '\\n',\n",
+       " 'sueña el que a medrar empieza,\\n',\n",
+       " 'sueña el que afana y pretende,\\n',\n",
+       " 'sueña el que agravia y ofende,\\n',\n",
+       " '\\n',\n",
+       " 'y en el mundo, en conclusión,\\n',\n",
+       " 'todos sueñan lo que son,\\n',\n",
+       " 'aunque ninguno lo entiende.\\n',\n",
+       " '\\n']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines=[x for x in open(path,encoding=\"utf-8\")]\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sueña el rico en su riqueza,',\n",
+       " 'que más cuidados le ofrece;',\n",
+       " '',\n",
+       " 'sueña el pobre que padece',\n",
+       " 'su miseria y su pobreza;',\n",
+       " '',\n",
+       " 'sueña el que a medrar empieza,',\n",
+       " 'sueña el que afana y pretende,',\n",
+       " 'sueña el que agravia y ofende,',\n",
+       " '',\n",
+       " 'y en el mundo, en conclusión,',\n",
+       " 'todos sueñan lo que son,',\n",
+       " 'aunque ninguno lo entiende.',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines=[x.rstrip() for x in open(path,encoding=\"utf-8\")]\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='../../examples/segismundo.txt' mode='r' encoding='utf-8'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_io.TextIOWrapper' object has no attribute 'open'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(line)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: '_io.TextIOWrapper' object has no attribute 'open'"
+     ]
+    }
+   ],
+   "source": [
+    "for line in f:\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(path,encoding=\"utf-8\") as f:\n",
+    "    lines=[x.rstrip() for x in f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='../../examples/segismundo.txt' mode='r' encoding='utf-8'>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sueña el rico en su riqueza,',\n",
+       " 'que más cuidados le ofrece;',\n",
+       " '',\n",
+       " 'sueña el pobre que padece',\n",
+       " 'su miseria y su pobreza;',\n",
+       " '',\n",
+       " 'sueña el que a medrar empieza,',\n",
+       " 'sueña el que afana y pretende,',\n",
+       " 'sueña el que agravia y ofende,',\n",
+       " '',\n",
+       " 'y en el mundo, en conclusión,',\n",
+       " 'todos sueñan lo que son,',\n",
+       " 'aunque ninguno lo entiende.',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines"
+   ]
   }
  ],
  "metadata": {
