--- a/Karim/Ch11/Chapter11.ipynb
+++ b/Karim/Ch11/Chapter11.ipynb
@@ -2929,10 +2929,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00   -0.915468\n",
+       "2012-03-08 09:30:00   -0.993684\n",
+       "2012-03-09 09:30:00    1.764713\n",
+       "2012-03-12 09:30:00   -0.866657\n",
+       "2012-03-13 09:30:00    0.119711\n",
+       "2012-03-14 09:30:00   -0.320392\n",
+       "2012-03-15 09:30:00    0.609719\n",
+       "2012-03-16 09:30:00    0.695957\n",
+       "2012-03-19 09:30:00    0.541432\n",
+       "2012-03-20 09:30:00   -0.417122\n",
+       "Freq: B, dtype: float64"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts=pd.Series(np.random.standard_normal(len(dates)),index=dates)\n",
+    "ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00+00:00   -0.915468\n",
+       "2012-03-08 09:30:00+00:00   -0.993684\n",
+       "2012-03-09 09:30:00+00:00    1.764713\n",
+       "2012-03-12 09:30:00+00:00   -0.866657\n",
+       "2012-03-13 09:30:00+00:00    0.119711\n",
+       "2012-03-14 09:30:00+00:00   -0.320392\n",
+       "2012-03-15 09:30:00+00:00    0.609719\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-09 09:30:00+04:00    1.764713\n",
+       "2012-03-12 09:30:00+04:00   -0.866657\n",
+       "2012-03-13 09:30:00+04:00    0.119711\n",
+       "2012-03-14 09:30:00+04:00   -0.320392\n",
+       "2012-03-15 09:30:00+04:00    0.609719\n",
+       "2012-03-16 09:30:00+04:00    0.695957\n",
+       "2012-03-19 09:30:00+04:00    0.541432\n",
+       "2012-03-20 09:30:00+04:00   -0.417122\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts1=ts[:7].tz_localize(\"Europe/London\")\n",
+    "ts2=ts[2:].tz_localize(\"Europe/Moscow\")\n",
+    "ts1\n",
+    "ts2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00+00:00   NaN\n",
+       "2012-03-08 09:30:00+00:00   NaN\n",
+       "2012-03-09 05:30:00+00:00   NaN\n",
+       "2012-03-09 09:30:00+00:00   NaN\n",
+       "2012-03-12 05:30:00+00:00   NaN\n",
+       "2012-03-12 09:30:00+00:00   NaN\n",
+       "2012-03-13 05:30:00+00:00   NaN\n",
+       "2012-03-13 09:30:00+00:00   NaN\n",
+       "2012-03-14 05:30:00+00:00   NaN\n",
+       "2012-03-14 09:30:00+00:00   NaN\n",
+       "2012-03-15 05:30:00+00:00   NaN\n",
+       "2012-03-15 09:30:00+00:00   NaN\n",
+       "2012-03-16 05:30:00+00:00   NaN\n",
+       "2012-03-19 05:30:00+00:00   NaN\n",
+       "2012-03-20 05:30:00+00:00   NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2012-03-07 09:30:00+00:00', '2012-03-08 09:30:00+00:00',\n",
+       "               '2012-03-09 05:30:00+00:00', '2012-03-09 09:30:00+00:00',\n",
+       "               '2012-03-12 05:30:00+00:00', '2012-03-12 09:30:00+00:00',\n",
+       "               '2012-03-13 05:30:00+00:00', '2012-03-13 09:30:00+00:00',\n",
+       "               '2012-03-14 05:30:00+00:00', '2012-03-14 09:30:00+00:00',\n",
+       "               '2012-03-15 05:30:00+00:00', '2012-03-15 09:30:00+00:00',\n",
+       "               '2012-03-16 05:30:00+00:00', '2012-03-19 05:30:00+00:00',\n",
+       "               '2012-03-20 05:30:00+00:00'],\n",
+       "              dtype='datetime64[ns, UTC]', freq=None)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result=ts1+ts2\n",
+    "result\n",
+    "result.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00+00:00   -0.915468\n",
+       "2012-03-08 09:30:00+00:00   -0.993684\n",
+       "2012-03-09 09:30:00+00:00    1.764713\n",
+       "2012-03-12 09:30:00+00:00   -0.866657\n",
+       "2012-03-13 09:30:00+00:00    0.119711\n",
+       "2012-03-14 09:30:00+00:00   -0.320392\n",
+       "2012-03-15 09:30:00+00:00    0.609719\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-09 09:30:00+04:00    1.764713\n",
+       "2012-03-12 09:30:00+04:00   -0.866657\n",
+       "2012-03-13 09:30:00+04:00    0.119711\n",
+       "2012-03-14 09:30:00+04:00   -0.320392\n",
+       "2012-03-15 09:30:00+04:00    0.609719\n",
+       "2012-03-16 09:30:00+04:00    0.695957\n",
+       "2012-03-19 09:30:00+04:00    0.541432\n",
+       "2012-03-20 09:30:00+04:00   -0.417122\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00+00:00   -0.915468\n",
+       "2012-03-08 09:30:00+00:00   -0.993684\n",
+       "2012-03-09 09:30:00+00:00    1.764713\n",
+       "2012-03-12 09:30:00+00:00   -0.866657\n",
+       "2012-03-13 09:30:00+00:00    0.119711\n",
+       "2012-03-14 09:30:00+00:00   -0.320392\n",
+       "2012-03-15 09:30:00+00:00    0.609719\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 13:30:00+04:00   -0.915468\n",
+       "2012-03-08 13:30:00+04:00   -0.993684\n",
+       "2012-03-09 13:30:00+04:00    1.764713\n",
+       "2012-03-12 13:30:00+04:00   -0.866657\n",
+       "2012-03-13 13:30:00+04:00    0.119711\n",
+       "2012-03-14 13:30:00+04:00   -0.320392\n",
+       "2012-03-15 13:30:00+04:00    0.609719\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts3=ts1.tz_convert(\"Europe/Moscow\")\n",
+    "ts3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012-03-07 09:30:00+00:00   -1.830936\n",
+       "2012-03-08 09:30:00+00:00   -1.987368\n",
+       "2012-03-09 09:30:00+00:00    3.529426\n",
+       "2012-03-12 09:30:00+00:00   -1.733313\n",
+       "2012-03-13 09:30:00+00:00    0.239423\n",
+       "2012-03-14 09:30:00+00:00   -0.640785\n",
+       "2012-03-15 09:30:00+00:00    1.219438\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts1+ts3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.5: Periods and Period Arithemtic"
+   ]
   }
  ],
  "metadata": {
